--- a/catalog.html
+++ b/catalog.html
@@ -4,23 +4,25 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Каталог</title>
+    <link rel="stylesheet" href="styles/style.css">
+
   </head>
   <body>
 
     <header class="main-header">
       <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" src="#" alt="логотип Sedona">
+        <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona">
       </a>
       <nav class="header-navigation">
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
-            <a class="header-navigation-link navigation-link-current" href="index.html">Главная</a>
+            <a class="header-navigation-link" href="index.html">Главная</a>
           </li>
           <li class="header-navigation-item">
             <a class="header-navigation-link" href="#">О Седоне</a>
           </li>
           <li class="header-navigation-item">
-            <a class="header-navigation-link" href="#">Гостинницы</a>
+            <a class="header-navigation-link" href="catalog.html" aria-current="page">Гостинницы</a>
           </li>
         </ul>
 
@@ -28,14 +30,14 @@
 
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
-              <img class="navigation-user-img" src="#" alt="Лупа">
+              <img class="navigation-user-img" src="images/Search.svg" width="19" height="19" alt="Поиск гостинницы">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
 
           <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">
-              <img class="navigation-user-img" src="#" alt="Избранное">
+              <img class="navigation-user-img" src="images/favorites.svg" width="18" height="17" alt="Избранное">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -44,6 +46,7 @@
             <input class="navigation-user-registration" type="button" value="ХОЧУ СЮДА!">
           </li>
         </ul>
+
       </nav>
     </header>
 
@@ -54,8 +57,11 @@
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
               <span class="visually-hidden">Главная</span>
-              <img class="breadcrumbs-img" src="#" alt="главная">
+              <img class="breadcrumbs-img" src="images/house.svg" width="13" height="13" alt="главная">
             </a>
+          </li>
+          <li class="breadcrumbs-item">
+            <img src="images/arrow.svg" alt="стрелка" width="8" height="11">
           </li>
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">Каталог</a>
@@ -70,13 +76,13 @@
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Инфраструктура:</legend>
 
-            <input type="checkbox" name="Pool" id="advantages-pool" value="Бассейн" checked>
+            <input type="checkbox" name="filter-group" id="advantages-pool" value="Бассейн" checked>
             <label for="advantages-pool">Бассейн</label>
 
-            <input type="checkbox" name="Parking" id="advantages-parking" value="Парковка" checked>
+            <input type="checkbox" name="filter-group" id="advantages-parking" value="Парковка" checked>
             <label for="advantages-parking">Парковка</label>
 
-            <input type="checkbox" name="Wi-Fi" id="advantages-WiFi" value="Wi-Fi">
+            <input type="checkbox" name="filter-group" id="advantages-WiFi" value="Wi-Fi">
             <label for="advantages-WiFi">Wi-Fi</label>
           </fieldset>
 
@@ -111,8 +117,8 @@
             Как делается слайдер?
             Как оставить надписи ОТ и ДО
             -->
-            <input class="catalog-range-input" type="number" min="0" max="10000" value="0">
-            <input class="catalog-range-input" type="number" min="0" max="10000" value="0">
+            <input class="catalog-range-input" name="min-price" type="number" min="0" max="10000" value="0">
+            <input class="catalog-range-input" name="max-price" type="number" min="0" max="10000" value="0">
           </fieldset>
 
           <input class="catalog-filter-submit" type="submit" value="Применить">
@@ -128,13 +134,13 @@
           </select>
           <div class="catalog-card">
             <button class="catalog-card-variant">
-              <img src="#" alt="Отображдение карточками">
+              <img src="images/positioning/positioning-3.svg" width="16" height="14" alt="Отображдение карточками">
             </button>
             <button class="catalog-card-variant">
-              <img src="#" alt="Отображение большими карточками">
+              <img src="images/positioning/positioning-1.svg" width="16" height="14" alt="Отображение большими карточками">
             </button>
             <button class="catalog-card-variant">
-              <img src="#" alt="Отображение списком">
+              <img src="images/positioning/positioning-2.svg" width="16" height="14" alt="Отображение списком">
             </button>
           </div>
         </header>
@@ -144,7 +150,7 @@
           <ul class="catalog-products-list">
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="#" alt="горы">
+              <img class="products-card-img" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="горы">
               <h3 class="products-card-title">Amara Resort & Spa</h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
@@ -159,7 +165,7 @@
             </li>
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="#" alt="горы">
+              <img class="products-card-img" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="горы">
               <h3 class="products-card-title">Villas at Poco Diablo</h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
@@ -174,7 +180,7 @@
             </li>
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="#" alt="горы">
+              <img class="products-card-img" src="images/hotels/hotel-3.jpg" width="300" height="212" alt="горы">
               <h3 class="products-card-title">Desert Quail Inn</h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
@@ -189,7 +195,7 @@
             </li>
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="#" alt="горы">
+              <img class="products-card-img" src="images/hotels/hotel-4.jpg" width="300" height="212" alt="горы">
               <h3 class="products-card-title">GreenTree Inn</h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
@@ -241,29 +247,29 @@
     </main>
 
     <footer class="main-footer">
-      <ul class="footer-social-media">
-        <li class="footer-social-media-item">
+      <ul class="social-media-list">
+        <li class="social-media-item">
           <span class="visually-hidden">вконтакте</span>
-          <a class="footer-social-media-link" href="#">
-            <img class="footer-social-media-img" src="#" alt="лого vk">
+          <a class="social-media-link" href="#">
+            <img class="social-media-img" src="images/social-links/vk.svg" width="25" height="15" alt="лого vk">
           </a>
         </li>
-        <li class="footer-social-media-item">
+        <li class="social-media-item">
           <span class="visually-hidden">телеграм</span>
-          <a class="footer-social-media-link" href="#">
-            <img class="footer-social-media-img" src="#" alt="лого telegram">
+          <a class="social-media-link" href="#">
+            <img class="social-media-img" src="images/social-links/telegram.svg" width="18" height="16" alt="лого telegram">
           </a>
         </li>
-        <li class="footer-social-media-item">
+        <li class="social-media-item">
           <span class="visually-hidden">youtube</span>
-          <a class="footer-social-media-link" href="#">
-            <img class="footer-social-media-img" src="#" alt="лого youtube">
+          <a class="social-media-link" href="#">
+            <img class="social-media-img" src="images/social-links/youtube.svg" width="23" height="18" alt="лого youtube">
           </a>
         </li>
       </ul>
       <a class="footer-contact-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="footer-contact-link" href="#">
-        <img class="footer-contact-link-img" src="#" alt="лого HTMLAcademy">
+        <img class="footer-contact-link-img" src="images/logo-HTML-Academy.svg" width="115" height="34" alt="лого HTMLAcademy">
       </a>
     </footer>
   </body>
