--- a/catalog.html
+++ b/catalog.html
@@ -150,8 +150,8 @@
           <ul class="catalog-products-list">
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="горы">
-              <h3 class="products-card-title">Amara Resort & Spa</h3>
+              <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="горы"></a>
+              <a class="products-card-link" href="#"><h3 class="products-card-title">Amara Resort & Spa</h3></a>
               <div>
                 <p class="products-card-text">Гостиница</p>
                 <p class="products-card-price">От 4000 ₽</p>
@@ -165,8 +165,8 @@
             </li>
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="горы">
-              <h3 class="products-card-title">Villas at Poco Diablo</h3>
+              <a class="products-card-link" href="#"<img class="products-card-img" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="горы"></a>
+              <h3 class="products-card-title"><a class="products-card-link" href="#">Villas at Poco Diablo</a></h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
                 <p class="products-card-price">От 5000 ₽</p>
@@ -180,8 +180,8 @@
             </li>
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="images/hotels/hotel-3.jpg" width="300" height="212" alt="горы">
-              <h3 class="products-card-title">Desert Quail Inn</h3>
+              <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-3.jpg" width="300" height="212" alt="горы"></a>
+              <h3 class="products-card-title"><a class="products-card-link" href="#">Desert Quail Inn</a></h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
                 <p class="products-card-price">От 2500 ₽</p>
@@ -195,8 +195,8 @@
             </li>
 
             <li class="catalog-products-card">
-              <img class="products-card-img" src="images/hotels/hotel-4.jpg" width="300" height="212" alt="горы">
-              <h3 class="products-card-title">GreenTree Inn</h3>
+              <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-4.jpg" width="300" height="212" alt="горы"></a>
+              <h3 class="products-card-title"><a class="products-card-link" href="#">GreenTree Inn</a></h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
                 <p class="products-card-price">От 1500 ₽</p>
