Применены стили к текстам

--- a/catalog.html
+++ b/catalog.html
@@ -165,7 +165,7 @@
             </li>
 
             <li class="catalog-products-card">
-              <a class="products-card-link" href="#"<img class="products-card-img" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="горы"></a>
+              <a class="products-card-link" href="#"><img class="products-card-img" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="горы"></a>
               <h3 class="products-card-title"><a class="products-card-link" href="#">Villas at Poco Diablo</a></h3>
               <div>
                 <p class="products-card-text">Гостиница</p>
