--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </li>
 
           <li class="navigation-user-item">
-            <input class="navigation-user-registration" type="button" value="ХОЧУ СЮДА!">
+            <input class="button navigation-user-registration" type="button" value="ХОЧУ СЮДА!">
           </li>
         </ul>
 
@@ -53,7 +53,7 @@
     <main class="main-index">
       <div class="welcome-image-background">
         <h1 class="visually-hidden">Город Седона</h1>
-        <img class="main-wellcome-to-sedona-img" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
+        <img class="main-wellcome-to-sedona-img" src="images/welcome.svg" width="458" height="352" alt="Wellocme-to-the-gargeous-SEDONA-becouse-the-grand-canyon-sucks">
       </div>
 
 
@@ -61,11 +61,12 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <span class="main-title">Седона — небольшой городок в Аризоне,заслуживающий большего!</span>
         <p class="main-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
         <ul class="advantages-list">
           <li class="advantages-item">
             <span class="advantages-item-title">Настоящий городок</span>
-            <p class="advantages-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-item-img" src="images/town.jpg" width='800' height='385' alt="вид на отель">
+            <p class="advantages-item-text"> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class= "advantages-item-img" src="images/town.jpg" width='800' height='385' alt="вид на отель">
           </li>
           <li class="advantages-item">
             <span class="advantages-item-title">Небольшая площадь</span>
@@ -94,32 +95,32 @@
         <ul class="main-infrastructure-list">
           <li class="main-infrastructure-item">
             <img class="main-infrastructure-img" src="images/advantages/advantage-housing.svg" width="76" height="72" alt="домик">
-            <span>ЖИЛЬЁ</span>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <span class="main-infrastructure-title">ЖИЛЬЁ</span>
+            <p class="main-infrastructure-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="main-infrastructure-item">
             <img class="main-infrastructure-img" src="images/advantages/advantage-food.svg" width="75" height="70" alt="еда">
-            <span>ЕДА</span>
-            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <span class="main-infrastructure-title">ЕДА</span>
+            <p class="main-infrastructure-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="main-infrastructure-item">
             <img class="main-infrastructure-img" src="images/advantages/advantage-surprise.svg" width="65" height="76" alt="сувениры">
-            <span>СУВЕНИРЫ</span>
-            <p>Не только китайского, но и настоящего местного производства!</p>
+            <span class="main-infrastructure-title">СУВЕНИРЫ</span>
+            <p class="main-infrastructure-text">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
 
       <section class="main-hotel-search">
         <h2 class="visually-hidden">Найти гостинницу</h2>
-        <span>ЗАИНТЕРЕСОВАЛИСЬ?</span>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="button search-holet">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+        <span class="main-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
+        <p class="main-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="button search-hotel">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
       </section>
 
       <section class="main-newsletter">
-        <h2 class="newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
-        <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2 class="main-title newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+        <p class="main-text newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
           <input class="newsletter-input" type="text" placeholder="Ваш e-mail">
           <input class="newsletter-submit" type="submit" value="ПОДПИСАТЬСЯ">
