--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <body>
 
     <header class="main-header">
-      <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
-      </a>
       <nav class="header-navigation">
         <ul class="header-navigation-list">
+          <li class="header-navigation-link">
+            <a class="navigation-logo" href="index.html">
+              <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
+            </a>
+          </li>
           <li class="header-navigation-item">
             <a class="header-navigation-link" href="#">Главная</a>
           </li>
@@ -119,7 +121,7 @@
       </section>
 
       <section class="main-newsletter">
-        <h2 class="main-title newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+        <h2 class="main-title newsletter-title-сфф">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
         <p class="main-text newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
           <input class="newsletter-input" type="text" placeholder="Ваш e-mail">
