--- a/catalog.html
+++ b/catalog.html
@@ -239,7 +239,7 @@
 
         <section class="catalog-newslatter">
           <h2 class="newsletter-catalog-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
-          <p class="newsletter-catalog-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
             <input class="newsletter-input" type="text" placeholder="Ваш e-mail">
             <input class="newsletter-submit" type="submit" value="ПОДПИСАТЬСЯ">
