логотип перемещен в список хэдера

--- a/catalog.html
+++ b/catalog.html
@@ -10,11 +10,13 @@
   <body>
 
     <header class="main-header">
-      <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona">
-      </a>
       <nav class="header-navigation">
         <ul class="header-navigation-list">
+          <li class="header-navigation-link">
+            <a class="navigation-logo" href="index.html">
+              <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="логотип Sedona" aria-current="page">
+            </a>
+          </li>
           <li class="header-navigation-item">
             <a class="header-navigation-link" href="index.html">Главная</a>
           </li>
