Добавлен стиль для active пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -221,7 +221,7 @@
           <h2 class="visually-hidden">Пагинация</h2>
           <ol class="catalog-pagination-list">
             <li class="catalog-pagination-item">
-              <a class="catalog-pagination-link" href="#">1</a>
+              <a class="catalog-pagination-link pagiation-link-active" href="#">1</a>
             </li>
             <li class="catalog-pagination-item">
               <a class="catalog-pagination-link" href="#">2</a>
