--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <section class="main-newsletter">
           <h2 class="main-title newsletter-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
           <p class="main-text newsletter-text">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="get">
+          <form class="newsletter-form newsletter-form-inner" action="https://echo.htmlacademy.ru" method="get">
             <input class="newsletter-input" type="text" placeholder="Ваш e-mail">
             <input class="newsletter-submit" type="submit" value="ПОДПИСАТЬСЯ">
           </form>
