Доделаны стили при наведении

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <span class="main-title search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
           <p class="main-text search-hotel-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в Седоне</p>
-          <button class="button search-hotel">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+          <button class="button search-hotel search-hotel-dark">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
         </section>
 
         <section class="main-newsletter">
