--- a/catalog.html
+++ b/catalog.html
@@ -38,6 +38,7 @@
             </li>
             <li class="navigation-user-item navigation-favorites">
               <a class="navigation-user-link nav-link-icon-favorites" href="#">
+                <span class="favorites-counter">12</span>
                 <span class="visually-hidden">Избранное.</span>
               </a>
             </li>
@@ -221,7 +222,7 @@
                 <p class="products-card-price">От 2500 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
                 <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <img class="products-card-stars card-buttons-item" src="#" alt="3 звезды">
                 <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 6,9</span>
               </li>
 
@@ -235,7 +236,7 @@
                 <p class="products-card-price">От 1500 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
                 <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <img class="products-card-stars card-buttons-item" src="#" alt="2 звезды">
                 <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 5,0</span>
               </li>
             </ul>
