--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
             <li class="navigation-user-item navigation-favorites">
               <a class="navigation-user-link nav-link-icon-favorites" href="#">
+                <span class="favorites-counter">12</span>
                 <span class="visually-hidden">Избранное.</span>
               </a>
             </li>
