Исправление замечаний наставника

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Каталог</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 
   <body>
@@ -154,9 +154,11 @@
                     <div class="range-scale">
                       <div class="range-bar" style="left: 0; width: 220px;">
                         <button type="button" class="toggle-button toggle-min">
+                          <span class="visually-hidden">минимальная стоимость.</span>
                         </button>
 
                         <button type="button" class="toggle-button toggle-max">
+                          <span class="visually-hidden">максимальная стоимость.</span>
                         </button>
                       </div>
                     </div>
@@ -185,16 +187,19 @@
                 <svg xmlns="http://www.w3.org/2000/svg"  focusable="false" aria-hidden="true"  width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z"/>
                 </svg>
+                <span class="visually-hidden">Отображение карточками.</span>
               </a>
               <a href="catalog.html?view=card" class="catalog-card-variant">
                 <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z"/>
                 </svg>
+                <span class="visually-hidden">Отображение большими карточками.</span>
               </a>
               <a href="catalog.html?view=list" class="catalog-card-variant">
                 <svg focusable="false" aria-hidden="true"  xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none" viewBox="0 0 16 14">
                   <path fill="#000" d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z"/>
                 </svg>
+                <span class="visually-hidden">Отображение списком.</span>
               </a>
             </div>
           </header>
