Заменет элемент input на button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
 
             <li class="navigation-user-item navigation-registration">
-              <input class="button navigation-user-registration" type="button" value="Хочу сюда!">
+              <button class="button navigation-user-registration">Хочу сюда!</button>
             </li>
           </ul>
 
